<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCoinsPaymentActivity">

    <TextView
        android:id="@+id/tv_AddCoinsHeader"
        android:layout_width="299dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_AddCoinsHeader"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_addCoinsfname"
        android:layout_width="128dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_addCoinsfname"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_AddCoinsHeader" />

    <TextView
        android:id="@+id/tv_addCoinsCardNo"
        android:layout_width="127dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/tv_addCoinsCardNo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_addCoinsfname" />

    <TextView
        android:id="@+id/tv_addCardExp"
        android:layout_width="165dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/tv_addCoinsCardExp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_addCoinsCardNo" />

    <TextView
        android:id="@+id/tv_addCoinsCVV"
        android:layout_width="144dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_addCoinsCVV"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_addCardExp" />

    <EditText
        android:id="@+id/et_addCoinsfnamepb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/et_addCoinsfname"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_addCoinsfname"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_addCoinsCardNopb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/et_addCoinsCardNo"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_addCoinsCardNo"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_addCoinsCardExpMonthpb"
        android:layout_width="82dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:ems="10"
        android:hint="@string/et_addCoinsCardExpMonth"
        android:inputType="numberDecimal"
        android:maxLength="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_addCardExp"
        app:layout_constraintStart_toEndOf="@+id/tv_addCardExp" />

    <EditText
        android:id="@+id/et_addCoinsCardExpYearpb"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/et_addCoinsCardExpYear"
        android:inputType="numberDecimal"
        android:maxLength="4"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_addCoinsCardExpMonthpb"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_addCoinsCVVpb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/et_addCoinsCVV"
        android:inputType="numberDecimal"
        android:maxLength="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_addCoinsCVV"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_addCoins"
        android:layout_width="246dp"
        android:layout_height="84dp"
        android:layout_marginTop="44dp"
        android:onClick="addCoins"
        android:text="@string/btn_addCoins"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:backgroundTint="@color/btn_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_addCoinsNumber" />

    <TextView
        android:id="@+id/tv_addCoinsNumber"
        android:layout_width="141dp"
        android:layout_height="53dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="36dp"
        android:text="@string/tv_addCoinsNumber"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_addCoinsCVV" />

    <EditText
        android:id="@+id/et_addCoinsNumberpb"
        android:layout_width="187dp"
        android:layout_height="54dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/et_addCoinsNumber"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_addCoinsNumber"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>