<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPaymentDetails">

    <Button
        android:id="@+id/btn_editpayment"
        android:layout_width="353dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:onClick="updatePaymentDetails"
        android:text="@string/btn_editpayment"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@color/btn_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_payByCardCVV2" />

    <Button
        android:id="@+id/btn_removePayment"
        android:layout_width="353dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:onClick="removePaymentDetails"
        android:text="@string/btn_removePayment"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="#C12E23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_editpayment" />

    <TextView
        android:id="@+id/tv_payByCardCVV2"
        android:layout_width="139dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_payByCardCVV"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_payByCardExp2" />

    <EditText
        android:id="@+id/et_payByCardCVV2"
        android:layout_width="226dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/et_payByCardCVV"
        android:inputType="numberDecimal"
        android:maxLength="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_payByCardCVV2"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_payByCardExpMonth2"
        android:layout_width="109dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:ems="10"
        android:hint="@string/et_payByCardExpMonth"
        android:inputType="numberDecimal"
        android:maxLength="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_payByCardExp2"
        app:layout_constraintStart_toEndOf="@+id/tv_payByCardExp2" />

    <EditText
        android:id="@+id/et_payByCardExpYear2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:ems="10"
        android:hint="@string/et_payByCardExpYear"
        android:inputType="numberDecimal"
        android:maxLength="4"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_payByCardExp2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_payByCardExp2"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_payByCardExp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_payByCardCardNo3" />

    <TextView
        android:id="@+id/tv_payByCardCardNo3"
        android:layout_width="139dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_payByCardCardNo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_payByCardFullName2" />

    <EditText
        android:id="@+id/et_payByCardCardNo3"
        android:layout_width="230dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/et_payByCardCardNo"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_payByCardCardNo3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_payByCardFullName2"
        android:layout_width="139dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_payByCardFullName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_editPayment" />

    <EditText
        android:id="@+id/et_payByCardFullName2"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:ems="10"
        android:hint="@string/et_payByCardFullName"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_payByCardFullName2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_editPayment"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:fontFamily="monospace"
        android:text="@string/tv_editPayment"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="56dp" />
</androidx.constraintlayout.widget.ConstraintLayout>