<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginActivity">

    <TextView
        android:id="@+id/tv_adminLoginText"
        android:layout_width="229dp"
        android:layout_height="63dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/tv_adminLoginText"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_adminLoginusername"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt_adminLoginusername"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_adminLoginText" />

    <TextView
        android:id="@+id/txt_adminLoginPassword"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_adminLoginPassword"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_adminLoginusername" />

    <EditText
        android:id="@+id/et_adminLoginusername"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/ET_adminLoginusername"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_adminLoginusername"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_adminLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:ems="10"
        android:hint="@string/et_adminLoginPassword"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_adminLoginPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_Loginadmin"
        android:layout_width="241dp"
        android:layout_height="77dp"
        android:layout_marginTop="68dp"
        android:onClick="adminLogin"
        android:text="@string/btn_Loginadmin"
        android:textSize="28sp"
        app:backgroundTint="@color/btn_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_adminLoginPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>